--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- FontAwesome  -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+    />
 
     <title>React App</title>
   </head>
