--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <link rel="icon" href="../src/Components/Home/images/blogo-gray.png" />
+
     <!-- FontAwesome  -->
     <link
       rel="stylesheet"
@@ -15,7 +12,7 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
     />
 
-    <title>React App</title>
+    <title>Bruno DaSilva Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
