Created noSprings Branch

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="../src/Components/Home/images/blogo-gray.png" />
+    <link rel="icon" href="./blogo-gray.png" />
 
     <!-- FontAwesome  -->
     <link
@@ -12,7 +12,7 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
     />
 
-    <title>Bruno DaSilva Portfolio</title>
+    <title>NoSpringsBranch Bruno DaSilva Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
