--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
     />
 
-    <title>NoSpringsBranch Bruno DaSilva Portfolio</title>
+    <title>MobileFirst Bruno DaSilva Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
