--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="author" content="Bruno DaSilva" />
+    <meta
+      name="copyright"
+      content="All rights reserved to Bruno DaSilva and bruno-dasilva.com"
+    />
+    <meta
+      name="description"
+      content="Bruno DaSilva is a web developer based in Dallas, Tx. With 6+ years of experience in multiples IT related fields"
+    />
+    <meta name="”robots”" content="index, follow" />
     <link rel="icon" href="./blogo-gray.png" />
 
     <title>Bruno DaSilva Portfolio</title>
