--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Bruno DaSilva" />
     <meta
       name="copyright"
       content="All rights reserved to Bruno DaSilva and bruno-dasilva.com"
     />
+
     <meta
       name="description"
       content="Bruno DaSilva is a web developer based in Dallas, Tx. With 6+ years of experience in multiples IT related fields"
     />
     <meta name="”robots”" content="index, follow" />
-    <link rel="icon" href="./blogo-gray.png" />
+
+    <meta name="theme-color" content="#545454" />
+
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="apple-touch-icon" href="./blogo-gray.png" />
+    <link rel="icon" type="image/png" href="./blogo-gray.png" />
 
     <title>Bruno DaSilva Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker
+            .register("./serviceWorker.js")
+            .then((reg) => console.log("Success: ", reg.scope))
+            .catch((err) => console.log("Failure: ", err));
+        });
+      }
+    </script>
     <div id="root"></div>
   </body>
 </html>
