Added meta tags for social media and fixed the href for GA Instructor profile

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,28 @@
       name="copyright"
       content="All rights reserved to Bruno DaSilva and bruno-dasilva.com"
     />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="description"
       content="Bruno DaSilva is a web developer based in Dallas, Tx. With 6+ years of experience in multiples IT related fields"
     />
     <meta name="”robots”" content="index, follow" />
+
+    <meta property="og:title" content="Bruno DaSilva Portfolio" />
+    <meta property="og:image" content="./blogo-gray.png" />
+    <meta
+      property="og:description"
+      content="Bruno DaSilva is a web developer based in Dallas, Tx. With 6+ years of experience in multiples IT related fields - , from client support to data analytics and server-side automation."
+    />
+    <meta property="og:url" content="https://www.bruno-dasilva.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Bruno DaSilva Portfolio " />
+    <meta
+      name="twitter:description"
+      content="Bruno DaSilva is a web developer based in Dallas, Tx. With 6+ years of experience in multiples IT related fields - , from client support to data analytics and server-side automation."
+    />
+    <meta name="twitter:image" content="./blogo-gray.png" />
+
     <link rel="manifest" href="./manifest.json" />
     <link rel="apple-touch-icon" href="./blogo-gray.png" />
     <link rel="icon" type="image/png" href="./blogo-gray.png" />
